[package]
name = "rust_service"
version = "0.1.0"
authors = ["shawn.hice@autodesk.com <shawn.hice@autodesk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.4"
indicatif = "0.13.0"
reqwest = "0.10.1"
tokio = { version = "0.2.0", default-features = true, features = ["macros"] }
futures = "0.3.1"
bytes = "0.5.3"
